ading elastic yaml

--- a/nodeport-elasticsearch.yaml
+++ b/nodeport-elasticsearch.yaml
@@ -9,11 +9,7 @@ spec:
     - name: http
       port: 9200
       targetPort: 9200
-      nodePort: 30920  # Or let K8s assign it if omitted
-    - name: transport
-      port: 9300
-      targetPort: 9300
-      nodePort: 30930
+      nodePort: 30920  # Optional: can omit to auto-assign
   selector:
     common.k8s.elastic.co/type: elasticsearch
     elasticsearch.k8s.elastic.co/cluster-name: quickstart
