--- a/nodeport-elasticsearch.yaml
+++ b/nodeport-elasticsearch.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: quickstart-es-http
+  name: es-nodeport
   namespace: elastic-system
 spec:
   type: NodePort
-  ports:
-    - name: http
-      port: 9200
-      targetPort: 9200
-      nodePort: 30920  # Optional: can omit to auto-assign
   selector:
-    common.k8s.elastic.co/type: elasticsearch
     elasticsearch.k8s.elastic.co/cluster-name: quickstart
+  ports:
+    - port: 9200
+      targetPort: 9200
+      nodePort: 30920  # Optional: omit to auto-assign
+      protocol: TCP
