--- a/kibana.yaml
+++ b/kibana.yaml
@@ -1,11 +1,12 @@
+# kibana.yaml
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
-  name: quickstart
+  name: kibana-prod
   namespace: elastic-system
 spec:
   version: 9.0.2
   count: 1
-  image: vmisra1989/kibana:9.0.2
+  image: vmisra1989/kibana:9.0.2  # your custom image
   elasticsearchRef:
-    name: quickstart
+    name: es-cluster-prod  # references the Elasticsearch cluster above
