--- a/elasticsearch.yaml
+++ b/elasticsearch.yaml
@@ -1,4 +1,3 @@
-# elasticsearch.yaml
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
@@ -6,19 +5,23 @@ metadata:
   namespace: elastic-system
 spec:
   version: 9.0.2
-  image: vmisra1989/elasticsearch:9.0.2  # your custom image
-  nodeSets:
-  - name: default
-    count: 1
-    config:
-      node.roles: ["master", "data", "ingest"]
-      node.store.allow_mmap: false
-    volumeClaimTemplates:
-    - metadata:
-        name: elasticsearch-data
+  image: vmisra1989/elasticsearch:9.0.2  # 👈 your custom image
+  http:
+    service:
       spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 5Gi
-        storageClassName: standard
+        type: NodePort                 # 👈 expose via NodePort
+  nodeSets:
+    - name: default
+      count: 1
+      config:
+        node.roles: ["master", "data", "ingest"]
+        node.store.allow_mmap: false
+      volumeClaimTemplates:
+        - metadata:
+            name: elasticsearch-data
+          spec:
+            accessModes: ["ReadWriteOnce"]
+            resources:
+              requests:
+                storage: 5Gi
+            storageClassName: standard
