--- a/elasticapm.yaml
+++ b/elasticapm.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: apm-server
-        image: vmisra1989/elastic-apm-server:9.0.2-amd64
+        image: vmisra1989/elastic-apm-server:9.0.2
         ports:
         - containerPort: 8200
         env:
