modifying APM file

--- a/elasticapm.yaml
+++ b/elasticapm.yaml
@@ -16,33 +16,39 @@ spec:
         app: elastic-apm-server
     spec:
       containers:
-        - name: apm-server
-          image: vmisra1989/elastic-apm-server:9.0.2
-          ports:
-            - containerPort: 8200
-          env:
-            - name: ELASTICSEARCH_HOSTS
-              value: "https://localhost:9200"
-            - name: ELASTICSEARCH_USERNAME
-              value: "elastic"
-            - name: ELASTICSEARCH_PASSWORD
-              value: "864Ftm5ztz13vXahe29Dt3f6"
-            - name: ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES
-              value: "/usr/share/apm-server/config/certs/ca.crt"
-            - name: APM_SERVER_RUM_ENABLED
-              value: "true"
-          volumeMounts:
-            - name: es-ca-cert
-              mountPath: /usr/share/apm-server/config/certs
-              readOnly: true
-          resources:
-            limits:
-              memory: "512Mi"
-              cpu: "500m"
-            requests:
-              memory: "256Mi"
-              cpu: "250m"
-      volumes:
-        - name: es-ca-cert
-          secret:
-            secretName: apm-es-ca-cert
+      - name: apm-server
+        image: vmisra1989/elastic-apm-server:9.0.2
+        ports:
+        - containerPort: 8200
+        env:
+        - name: ELASTICSEARCH_HOSTS
+          value: "https://es-cluster-prod-es-http.elastic-system.svc:9200" 
+        - name: ELASTICSEARCH_USERNAME
+          value: "elastic"
+        - name: ELASTICSEARCH_PASSWORD
+          value: "864Ftm5ztz13vXahe29Dt3f6"
+        - name: ELASTICSEARCH_SSL_VERIFICATION_MODE
+          value: "none" # Replace with your ES URL if different
+        - name: APM_SERVER_RUM_ENABLED
+          value: "true"  # Enable RUM if you want to capture browser APM data
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: elastic-apm-server
+  namespace: elastic-system
+spec:
+  selector:
+    app: elastic-apm-server
+  ports:
+  - protocol: TCP
+    port: 8200
+    targetPort: 8200
+  type: ClusterIP
