--- a/elasticapm.yaml
+++ b/elasticapm.yaml
@@ -20,17 +20,10 @@ spec:
         image: vmisra1989/elastic-apm-server:9.0.2
         ports:
         - containerPort: 8200
-        env:
-        - name: ELASTICSEARCH_HOSTS
-          value: "https://es-cluster-prod-es-http.elastic-system.svc:9200" 
-        - name: ELASTICSEARCH_USERNAME
-          value: "elastic"
-        - name: ELASTICSEARCH_PASSWORD
-          value: "864Ftm5ztz13vXahe29Dt3f6"
-        - name: ELASTICSEARCH_SSL_VERIFICATION_MODE
-          value: "none" # Replace with your ES URL if different
-        - name: APM_SERVER_RUM_ENABLED
-          value: "true"  # Enable RUM if you want to capture browser APM data
+        volumeMounts:
+        - name: config-volume
+          mountPath: /usr/share/apm-server/apm-server.yml
+          subPath: apm-server.yml
         resources:
           limits:
             memory: "512Mi"
@@ -38,6 +31,10 @@ spec:
           requests:
             memory: "256Mi"
             cpu: "250m"
+      volumes:
+      - name: config-volume
+        configMap:
+          name: apm-server-config
 ---
 apiVersion: v1
 kind: Service
