modifying APM file

--- a/apm-server.yml
+++ b/apm-server.yml
@@ -11,10 +11,9 @@ data:
         enabled: true
       otlp:
         enabled: true
-        grpc:
-          host: "0.0.0.0:4317"
-        http:
-          host: "0.0.0.0:4318"
+        protocols:
+          grpc: {}
+          http: {}
 
     output.elasticsearch:
       hosts: ["https://es-cluster-prod-es-http.elastic-system.svc:9200"]
