changing apm secrets

--- a/apm-server.yaml
+++ b/apm-server.yaml
@@ -16,7 +16,7 @@ data:
           http: {}
       
       auth:
-        secret_token: "N3Rha0daZ0J5Z0RILVBja1d1Z3Q6U1NYU0RHU3B0RXYwNUowdTY3RTVldw=="  # 🔐 Add this line
+        secret_token: "7takGZgBygDH-PckWugt:SSXSDGSptEv05J0u67E5ew"  # 🔐 Add this line
 
 
     output.elasticsearch:
