--- a/kibana.yaml
+++ b/kibana.yaml
@@ -1,3 +1,4 @@
+# kibana.yaml
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
@@ -6,10 +7,13 @@ metadata:
 spec:
   version: 9.0.2
   count: 1
-  image: vmisra1989/kibana:9.0.2
+  image: vmisra1989/kibana:9.0.2  # your custom image
   elasticsearchRef:
+    name: es-cluster-prod  # references the Elasticsearch cluster above
+
+
+      elasticsearchRef:
     name: es-cluster-prod
   config:
     xpack.apm.enabled: true
     xpack.apm.ui.enabled: true
-    xpack.apm.ui.index: "apm-*"
