--- a/elasticsearch.yaml
+++ b/elasticsearch.yaml
@@ -1,4 +1,4 @@
-# elasticsearch.yaml
+
 apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
@@ -8,17 +8,17 @@ spec:
   version: 9.0.2
   image: vmisra1989/elasticsearch:9.0.2  # your custom image
   nodeSets:
-  - name: default
-    count: 1
-    config:
-      node.roles: ["master", "data", "ingest"]
-      node.store.allow_mmap: false
-    volumeClaimTemplates:
-    - metadata:
-        name: elasticsearch-data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 5Gi
-        storageClassName: standard
+    - name: default
+      count: 1
+      config:
+        node.roles: ["master", "data", "ingest", "transform"]
+        node.store.allow_mmap: false
+      volumeClaimTemplates:
+        - metadata:
+            name: elasticsearch-data
+          spec:
+            accessModes: ["ReadWriteOnce"]
+            resources:
+              requests:
+                storage: 5Gi
+            storageClassName: standard
